sem solid